--- a/build_bazi_chart.ipynb
+++ b/build_bazi_chart.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "2629bdbd-7bab-4e77-8225-29fce8626f6a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "d735f521-710e-4372-8ca5-f420766950cc",
    "metadata": {
     "scrolled": true,
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "120178e2-df6e-4704-98e1-81fa5186c0ac",
    "metadata": {
     "scrolled": true,
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "a46caee7-c6ee-4add-937b-f88a22d18fa1",
    "metadata": {},
    "outputs": [
@@ -125,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "74eae541-db41-4a8a-b5a1-c35ab70dc9e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2022, 7, 28, 23, 59, 44, 404428)"
+       "datetime.datetime(2022, 7, 31, 14, 39, 55, 647159)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "b0cc96f7-b078-4258-93b8-1f67e6973955",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "(38, 40, 42, 27)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "f1fdceab-7f0f-4cd5-bc57-c5037adbd205",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "4a10e586-8ca6-4a0c-a677-747b1b4a3dbb",
    "metadata": {},
    "outputs": [],
@@ -241,6 +241,8 @@
     "            self.watch_pair = None\n",
     "            hour = 0\n",
     "        self.timepoint = dt.datetime(year, month, day, hour, minute)\n",
+    "        \n",
+    "        \n",
     "        if image: self.image = IMG.open(image)\n",
     "        self.instances.append(self)\n",
     "        \n",
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "c36fe169-e2f1-4729-ac3e-3534012f9964",
    "metadata": {},
    "outputs": [
@@ -286,7 +288,7 @@
        "TestDuang(1982-06-29 13:40:00; watch: 戊午; day: 癸未; month: 丙午; year: 壬戌)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "829f70c5-f2c8-4e7a-bde0-7bf4c83ed9e1",
    "metadata": {},
    "outputs": [
@@ -319,7 +321,7 @@
        "TestDuang(1982-01-12 00:00:00; watch: None; day: 乙未; month: 辛丑; year: 壬戌)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "8ada74af-4692-4807-99b2-ef55756fef53",
    "metadata": {},
    "outputs": [
@@ -352,7 +354,7 @@
        "TestDuang(1955-10-28 22:00:00; watch: 辛亥; day: 壬戌; month: 丙戌; year: 乙未)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "14bf6b07-bb61-44b1-ab77-25bc2bca0130",
    "metadata": {},
    "outputs": [
@@ -385,7 +387,7 @@
        "TestDuang(1947-07-15 00:00:00; watch: None; day: 乙未; month: 丁未; year: 丁亥)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,6 +396,72 @@
     "duang3 = TestDuang(2490-543, 7, 15, None, 0, \n",
     "                   '丁亥', '丁未', '乙未', '壬午')\n",
     "duang3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a496d3a9-a514-48a7-8c9a-83aae9f42387",
+   "metadata": {},
+   "source": [
+    "5. **Duang4** \n",
+    "\n",
+    "<img src=\"duang4.png\" width=20%>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1014eb40-645a-4c80-b5c5-c4c24f4c3729",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestDuang(2013-07-27 07:59:00; watch: 戊辰; day: 甲午; month: 己未; year: 癸巳)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duang4 = TestDuang(2556-543, 7, 27, 7, 59, \n",
+    "                   '癸巳', '己未', '甲午', '戊辰')\n",
+    "duang4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b0525d-5e16-4d99-9d41-2c02b423a42c",
+   "metadata": {},
+   "source": [
+    "6. **Duang5** \n",
+    "\n",
+    "<img src=\"duang5.png\" width=20%>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5c832af0-0e42-4cca-a487-fe79ed1cd51d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestDuang(1973-02-14 23:45:00; watch: 庚子; day: 壬午; month: 甲寅; year: 癸丑)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duang5 = TestDuang(2516-543, 2, 14, 23, 45, \n",
+    "                   '癸丑', '甲寅', '壬午', '庚子')\n",
+    "duang5"
    ]
   },
   {
@@ -418,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "95472a7d-5b12-49d8-a930-f2697df902f2",
    "metadata": {},
    "outputs": [],
@@ -440,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "6b125b1a-1e07-4913-9464-991ae7961ef7",
    "metadata": {},
    "outputs": [
@@ -450,7 +518,7 @@
        "('壬戌', '壬戌', True)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "1b087a97-2e95-403c-a4e6-36d49fcbcfe0",
    "metadata": {},
    "outputs": [],
@@ -481,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "1cb964e0-7aaa-466b-8ddd-16f789e86536",
    "metadata": {},
    "outputs": [],
@@ -499,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "17ac22c9-ee7a-479c-ac32-57f145638fad",
    "metadata": {},
    "outputs": [
@@ -507,7 +575,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1991 辛未 8\n"
+      "1994 甲戌 11\n"
      ]
     }
    ],
@@ -518,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "8481769e-05da-487a-b6ff-0dc3224bb46f",
    "metadata": {},
    "outputs": [
@@ -526,23 +594,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2000 庚辰 17\n",
-      "1959 己亥 36\n",
-      "1993 癸酉 10\n",
-      "1961 辛丑 38\n",
-      "2022 壬寅 39\n",
-      "1987 丁卯 4\n",
-      "1992 壬申 9\n",
-      "1947 丁亥 24\n",
+      "2010 庚寅 27\n",
+      "1935 乙亥 12\n",
+      "1925 乙丑 2\n",
+      "1953 癸巳 30\n",
+      "1988 戊辰 5\n",
+      "1933 癸酉 10\n",
+      "1928 戊辰 5\n",
+      "2009 己丑 26\n",
+      "2041 辛酉 58\n",
+      "2003 癸未 20\n",
+      "1989 己巳 6\n",
+      "1926 丙寅 3\n",
+      "1997 丁丑 14\n",
       "1973 癸丑 50\n",
-      "2026 丙午 43\n",
-      "1976 丙辰 53\n",
-      "2021 辛丑 38\n",
-      "1960 庚子 37\n",
-      "1944 甲申 21\n",
-      "2016 丙申 33\n",
-      "1929 己巳 6\n",
-      "2033 癸丑 50\n"
+      "1993 癸酉 10\n",
+      "1990 庚午 7\n",
+      "1977 丁巳 54\n"
      ]
     }
    ],
@@ -562,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "80b83afd-919d-4422-a027-ab1575a55a3b",
    "metadata": {},
    "outputs": [
@@ -572,7 +640,7 @@
        "('壬戌', 1982)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "541f22d1-fb30-4d11-b553-f3b4185cda69",
    "metadata": {},
    "outputs": [
@@ -602,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "dadd17c1-4f5a-494b-aa9b-21c5e13e1214",
    "metadata": {},
    "outputs": [
@@ -629,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "eeed595e-d997-4e58-9f2c-0362a3ad44ac",
    "metadata": {},
    "outputs": [],
@@ -651,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "id": "6d381089-a321-4161-b291-7c56a29e685c",
    "metadata": {},
    "outputs": [
@@ -661,7 +729,7 @@
        "('丙午', '丙午', True)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "id": "a42799cc-c6ec-4875-a59f-50057cbfe490",
    "metadata": {},
    "outputs": [
@@ -690,7 +758,7 @@
        "('辛丑', '辛丑', True)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "id": "19e1295a-8599-4ca3-9d26-232014a94296",
    "metadata": {},
    "outputs": [],
@@ -717,13 +785,15 @@
     "def day_pair(timepoint):\n",
     "    day_delta = (timepoint.date() - RoSo.date()).days  # taking only date to eliminate the shifting effect of the non-zero Rattanakosin zero TIME\n",
     "    index = zero_day_index + (day_delta % 60 - int((zero_day_index + day_delta % 60) > 59) * 60)  # automatically -60 if goes out of range\n",
+    "    if timepoint.hour == 23 :  # the day pair changes at the beginning of the first watch (Rat), i.e. 11pm of the previous calendar day\n",
+    "        index += 1\n",
     "    pair = pairs[index]\n",
     "    return pair"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "80de00c5-7cb5-4054-be35-b7f51e18444a",
    "metadata": {},
    "outputs": [],
@@ -742,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "22b29dad-ef85-42fa-9818-46098e119d61",
    "metadata": {},
    "outputs": [
@@ -776,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "id": "4e9490ef-9b70-44d3-bc99-9e866b11ff70",
    "metadata": {},
    "outputs": [
@@ -802,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "id": "b7cecc4a-2d12-4c9e-bfd9-986b4112bf1c",
    "metadata": {},
    "outputs": [
@@ -828,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "id": "294ec132-8be0-4c7b-bd73-a9620ebdc8de",
    "metadata": {},
    "outputs": [
@@ -841,7 +911,7 @@
     }
    ],
    "source": [
-    "print(all_pairs(duang3.timepoint), duang3.all_pairs()[:3], all_pairs(duang3.timepoint) == duang3.all_pairs()[:3])"
+    "print(all_pairs(duang3.timepoint)[:3], duang3.all_pairs()[:3], all_pairs(duang3.timepoint)[:3] == duang3.all_pairs()[:3])"
    ]
   },
   {
@@ -854,16 +924,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
+   "id": "6d12dc94-a7e8-4c7f-b7c8-0a0211ec12a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def equalize(timepoint):\n",
+    "    # wiping off timecrumbs irrelevant to watch definition as changing every odd hour\n",
+    "    adjusted_hour = timepoint.hour - int(timepoint.hour % 2 == 0)\n",
+    "    if adjusted_hour == -1 :  # to handle the Rat watch properly\n",
+    "        adjusted_hour = 23 \n",
+    "        adjusted_day = timepoint.day - 1\n",
+    "        return timepoint.replace(day = adjusted_day, hour = adjusted_hour, minute = 0)\n",
+    "    return timepoint.replace(hour = adjusted_hour, minute = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "04bc29e2-a7a8-4ad6-bb4a-f12871e76428",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def watch_pair(timepoint):\n",
+    "#     timedelta = timepoint - RoSo\n",
+    "#     watch_delta = timedelta.days * 12 + timedelta.seconds // (60 * 120)  # one watch = 120 minutes making 12 watches in a day\n",
+    "#     index = zero_watch_index + (watch_delta % 60 - int((zero_watch_index + watch_delta % 60) > 59) * 60)\n",
+    "#     pair = pairs[index]\n",
+    "#     return pair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c70f186c-73de-4c81-815c-b2d6ac909a1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def watch_pair(timepoint):\n",
-    "    timedelta = timepoint - RoSo\n",
-    "    watch_delta = timedelta.days * 12 + timedelta.seconds // (60 * 120)  # one watch = 120 minutes making 12 watches in a day\n",
-    "    if not timepoint.hour % 2:  # watch changes every odd hour\n",
-    "        watch_delta += 1  # to account for even hour midwatch \n",
+    "    timedelta = equalize(timepoint) - equalize(RoSo)  # wiping off timecrumbs irrelevant to watch definition as changing every odd hour\n",
+    "    watch_delta = round(timedelta.total_seconds()) // (60 * 120)  # one watch = 120 minutes \n",
     "    index = zero_watch_index + (watch_delta % 60 - int((zero_watch_index + watch_delta % 60) > 59) * 60)\n",
     "    pair = pairs[index]\n",
     "    return pair"
@@ -871,13 +971,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "id": "d3c7fe53-70a2-404e-ac48-de1f93537690",
    "metadata": {},
    "outputs": [],
    "source": [
     "def all_pairs(timepoint):  # now including watch\n",
     "    return year_pair(timepoint), month_pair(timepoint), day_pair(timepoint), watch_pair(timepoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "bc691214-8ebe-442f-9ed3-5a127b8a7575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_all(duang):\n",
+    "    return all_pairs(duang.timepoint), duang.all_pairs(), all_pairs(duang.timepoint) == duang.all_pairs()"
    ]
   },
   {
@@ -890,17 +1001,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 38,
    "id": "92005b94-6021-4f33-8a9f-ec5b93edf081",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('戊午', '戊午', True)"
+       "('己未', '戊午', False)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 39,
    "id": "3f315422-b9fc-4b20-9d7a-e7025be3ba41",
    "metadata": {},
    "outputs": [
@@ -927,8 +1038,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1982-06-29 13:40:00 戊午 戊午 True\n",
-      "1955-10-28 22:00:00 辛亥 辛亥 True\n"
+      "1982-06-29 13:40:00 戊午 己未 False\n",
+      "1955-10-28 22:00:00 辛亥 辛亥 True\n",
+      "2013-07-27 07:59:00 戊辰 戊辰 True\n",
+      "1973-02-14 23:45:00 庚子 庚子 True\n"
      ]
     }
    ],
@@ -939,9 +1052,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59c9efdc-0f6c-4729-9b1c-7c1c551c1c13",
+   "metadata": {},
+   "source": [
+    "**The touchstone is off. Needs to be further investigated.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0644be82-16ee-459f-bd07-62e4f6d6f465",
+   "metadata": {},
+   "source": [
+    "Test on all cases with both watch pair and time information available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "394ac1fe-d41c-4fd7-b2fd-651530c9c47f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('壬戌', '丙午', '癸未', '己未') ('壬戌', '丙午', '癸未', '戊午') False\n",
+      "('乙未', '丙戌', '壬戌', '辛亥') ('乙未', '丙戌', '壬戌', '辛亥') True\n",
+      "('癸巳', '己未', '甲午', '戊辰') ('癸巳', '己未', '甲午', '戊辰') True\n",
+      "('癸丑', '甲寅', '壬午', '庚子') ('癸丑', '甲寅', '壬午', '庚子') True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for instance in TestDuang.instances:\n",
+    "    if instance.watch_pair:\n",
+    "        print(*test_all(instance))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "366ea5bc-019c-4d9c-ac85-3e97dd1c3e36",
+   "metadata": {},
+   "source": [
+    "Everything right but the touchstone watch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3692fcf-bd8e-4425-8884-c49610abdca1",
+   "id": "fa96da26-2eda-4198-b12d-be131c434d73",
    "metadata": {},
    "outputs": [],
    "source": []
